--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "SESSION_ID": {
             "description": "Type the Session-ID you got from scaning QR",
             "required": true,
-            "value": "put session id here"
+            "value": "VAJIRA-MD=aE1E1LrS#bWqWlIr9n88EuGUBIPSMvhUGHrjzTX_3ouJrkSu9ZCo"
         },
     "COMMAND_TYPE": {
             "description": "Put here (button or nonbutton) to change bot command mode",
